5.0.17
------
(RB=670945)
Fix compatibility impact for added/removed fields in union

5.0.16
------
(RB=668458)
Add hasBindingMethods to RequestBuilderSpec to support generating request builders based on type binding information.

5.0.15
------
(RB=670021)
check for writehandle not null in connector

5.0.14
------
(RB=666783)
Add support for "x-snappy-framed" encoding in rest compression filter 

5.0.13
------
(RB=668278)
Fix a race condition in StreamExecutionCallback

5.0.12
------
(RB=665715)
Do not create https transport client if SSL context is not available

5.0.11
------
(RB=664750)
Fix a bug when detecting cookies name with $ sign at the beginning. Check $ sign in the trimed name.

5.0.10
------
(RB=653970)
Write missing d2 configurations into zookeeper.
(RB=665296)
Relax the SSL Context/Parameter checking for d2.

5.0.9
-----
(RB=647541)
Allow array of union be resource method parameter.

5.0.8
-----
(RB=611897)
Validate data returned from create and get.

(RB=636452)
Notify listeners when SimpleLoadBalancerState shutdown

(RB=648493)
Compare ReadOnly and CreateOnly paths properly in RestLiAnnotationReader.

(RB=650205)
Add support for alternate schema parsers by introducing PegasusSchemaParser and DataSchemaParserFactory interface.

(RB=653619)
Fix a bug in R2 client where a valid connection close can lead to
rate-limiting logic being applied to subsequent connection attempts.

5.0.7
-----
(RB=635961)
OPTIONS response now includes named schemas from association keys.

(RB=641926)
Change PhotoResource in restli-example-server to allow dummy ID and URN values in CREATE and UPDATE

5.0.6
-----
(RB=637091)
Modify multipart mime streaming test to avoid transient failures

(RB=631279)
Add option to specify a validator class map in RestLiDataValidator

5.0.5
-----
(RB=626749)
Enable delay markup in ZooKeeperAnnouncer

(RB=623465)
ByteString API changes to support multipart mime streaming

(RB=529863)
Introduce async multipart mime support

5.0.4
-----